# platform-block-cache-layer

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md
api/: .gitignore  Makefile  pyproject.toml
api/src/: __init__.py  config.py  event_handler.py  main.py  stats_aggregator.py
api/src/auth/: context.py  dependencies.py  middleware.py
api/src/cache/: dependencies.py  embedding_service.py  models.py  normalizer.py  opensearch_repository.py  pricing.py  repository.py  router.py  schemas.py  service.py
api/src/common/: base_models.py  circuit_breaker.py  dependencies.py  exceptions.py  middleware.py  tracing.py
api/src/health/: router.py
api/tests/: conftest.py  test_event_handler.py  test_stats_aggregator.py
api/tests/cache/: test_embedding_service.py  test_normalizer.py  test_opensearch_repository.py  test_repository.py  test_router.py  test_service.py
api/tests/common/: test_circuit_breaker.py
api/tests/health/: test_router.py
docs/superpowers/plans/: 2026-04-01-phase4-advanced-features.md
docs/superpowers/specs/: 2026-04-01-phase4-advanced-features-design.md
mcp/: pyproject.toml
mcp/src/bold_cache_layer_mcp/: __init__.py  config.py  server.py
mcp/tests/: test_server.py
sdk/: README.md  pyproject.toml
sdk/src/boldsci_cache_layer/: __init__.py  _base.py  client.py  exceptions.py  types.py
sdk/tests/: conftest.py  test_base.py  test_client.py  test_exceptions.py  test_types.py
terraform/: api-gateway.tf  dynamodb.tf  eventbridge.tf  lambda.tf  main.tf  opensearch.tf  outputs.tf  ssm.tf  variables.tf
ui/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
ui/src/: index.ts  nav.ts  routes.ts
ui/src/api/: client.ts
ui/src/hooks/: use-cache-config.ts  use-cache-entries.ts  use-cache-stats.ts  use-invalidate-cache.ts
ui/src/pages/: CacheConfigPage.tsx  CacheDashboardPage.tsx  CacheEntriesPage.tsx  CacheInvalidationPage.tsx
ui/src/types/: schemas.ts
