[project]
name = "bold-cache-layer-mcp"
version = "0.1.0"
description = "MCP server for the Bold Science Cache Layer"
readme = "../ARCHITECTURE.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "boldsci-cache-layer",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
boldsci-cache-layer = {path = "../sdk", editable = true}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bold_cache_layer_mcp"]
